--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 # Prerequisites
 *.d
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
 # Precompiled Headers
 *.gch
 *.pch
@@ -39,3 +33,8 @@
 
 # debug information files
 *.dwo
+
+# build file
+build
+
+
